--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,45 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color : #DFD7E2
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  border-color: transparent;
+  border-radius: 20px;
+  margin: 80px 380px;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+  height: 60vh;
+  border-radius: 20px;
+}
+
+.button-class{
+  height: 5vh;
+  width: 100px;
+  border-radius: 10px;
+  border-color: transparent;
+  font-size: 20px;
+  margin-top: 20px;
+  background-color : #DFD7E2;
+}
+.button-class:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.delete-class:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
